-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: javafx
-
Environment:
Windows 10 64-bit
Running my JavaFX application with -Xcheck:jni resulted in several warnings from Glass.
E.g.:
WARNING in native method: JNI call made without checking exceptions when required to from CallStaticObjectMethodV
at com.sun.glass.ui.win.WinApplication._runLoop(Native Method)
at com.sun.glass.ui.win.WinApplication.lambda$null$148(WinApplication.java:191)
at com.sun.glass.ui.win.WinApplication$$Lambda$57/665296081.run(Unknown Source)
at java.lang.Thread.run(Unknown Source)
WARNING in native method: JNI call made without checking exceptions when required to from CallStaticObjectMethodV
at com.sun.glass.ui.win.WinApplication._enterNestedEventLoopImpl(Native Method)
at com.sun.glass.ui.win.WinApplication._enterNestedEventLoop(WinApplication.java:218)
at com.sun.glass.ui.Application.enterNestedEventLoop(Application.java:511)
at com.sun.glass.ui.EventLoop.enter(EventLoop.java:107)
at com.sun.javafx.tk.quantum.QuantumToolkit.enterNestedEventLoop(QuantumToolkit.java:583)
at javafx.stage.Stage.showAndWait(Stage.java:474)
E.g.:
WARNING in native method: JNI call made without checking exceptions when required to from CallStaticObjectMethodV
at com.sun.glass.ui.win.WinApplication._runLoop(Native Method)
at com.sun.glass.ui.win.WinApplication.lambda$null$148(WinApplication.java:191)
at com.sun.glass.ui.win.WinApplication$$Lambda$57/665296081.run(Unknown Source)
at java.lang.Thread.run(Unknown Source)
WARNING in native method: JNI call made without checking exceptions when required to from CallStaticObjectMethodV
at com.sun.glass.ui.win.WinApplication._enterNestedEventLoopImpl(Native Method)
at com.sun.glass.ui.win.WinApplication._enterNestedEventLoop(WinApplication.java:218)
at com.sun.glass.ui.Application.enterNestedEventLoop(Application.java:511)
at com.sun.glass.ui.EventLoop.enter(EventLoop.java:107)
at com.sun.javafx.tk.quantum.QuantumToolkit.enterNestedEventLoop(QuantumToolkit.java:583)
at javafx.stage.Stage.showAndWait(Stage.java:474)
- relates to
-
JDK-8168616 -Xcheck:jni indicates there are missing exception checks in Font
-
- Resolved
-
-
JDK-8168753 -Xcheck:jni indicates lots of warning on JNI local refs: zu, exceeds capacity
-
- Closed
-