8166470: -Xcheck:jni indicates there are missing exception checks in Glass

Reviewed-by: kcr